-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2011-09-23	jluis
	* grd2xyz.c		Make -S option work in GMT_COMPAT mode.

2011-09-22	remko
	* psclip.c, pscoast.c, grdcontour.c:	Changed order GMT_plotcanvas and
				GMT_plane_perspective.
	* gmt_plot.c:		Added a new way to determine the edges of a plot when circular.

2011-09-21	pwessel
	* pstext.txt:		Removed old -S from examples

2011-09-21	fwobbe
	* filter1d.c:		Fixed a bug that caused incomplete output of successive
				segments. Cleaned up code (use prefix operator). Removed
				expensive while constructs to speed up large start/stop
				times in -T
	* gmtconvert.c:		Prevent memory access violation in GMT_report
	* pswiggle.txt:		Removed old option -N from synopsis

2011-09-21	remko
	* common_options.txt:	Added missing -Xf, -Yf
	* pscoast.c:		Set default fill colour to same as set by -B+g
	* test/pscoast/{placement,pseudo}.sh:	New tests by Ken McLean

2011-09-20	pwessel
	* meca:			Added missing -A to the synopsis of psvelo.c

2011-09-20	fwobbe
	* {dbase,gshhs,imgsrc,meca,mgd77,potential,segyprogs,sph,spotter,x2sys,}Makefile:
				Add rm -rf *.dSym to clean targets. Do not generate dSYM
				files in bindir and libdir: dsymutil cannot create symbol
				files without object file present (CC invoked without -c).
	* gmt_gdalwrite.c:	Avoid tiling small GTiffs

2011-09-18	remko
	* grdimage.c:		Avoid segfault when not reading grid through GDAL.
				(Thanks, Florian)

2011-09-15	remko
	* gmt_init.c:		Produce error report when non-common option found by
				GMT_default_error.
	* *_func.c:		Renamed to *.c

2011-09-15	pwessel
	* *.c:			Change module interface to one flavor:
				GMT_module (API, mode, args) to avoid having separate
				GMT_module and GMT_module_cmd wrappers.  This eliminates
				the need for the gmt_module.c and gmt_<suppl>.c files.

2011-09-12	remko